# ownfinances_webapp

./: .env.example  .flaskenv  .gitignore  DOCKER-SETUP.md  Dockerfile  Dockerfile.prod  Makefile  ModifyDBprocess.md  QUICK-REFERENCE.md  QUICKSTART.md  README.MD  README.docker.md  SETUP-SUMMARY.md  assign_admin_role.py  carpetas.txt  docker-compose.prod.yml  docker-compose.yml  estructura_carpetas.txt  pyproject.toml  req.txt  requirements.prod.txt  requirements.txt  setup-local-uv.sh  start-docker.bat  start-docker.sh  update_existing_users.py
app/: __init__.py  extensions.py  gdrive_management.py  general_funcions.py  init_utils.py  models.py
app/blueprints/incomings/: __init__.py  consults.py  routes.py
app/blueprints/incomings/templates/: incomings.html
app/blueprints/investments/: __init__.py  consults.py  routes.py
app/blueprints/investments/css/: style.css
app/blueprints/investments/templates/: investments.html
app/blueprints/login/: __init__.py  forms.py  routes.py
app/blueprints/login/templates/: debug.html  login.html  (+1 more)
app/blueprints/resume/: __init__.py  auxiliar_functions.py  consults.py  inserts.py  routes.py
app/blueprints/valoracion/: __init__.py  routes.py  selection_algorithms.py
app/blueprints/wastes/: __init__.py  consults.py  routes.py
app/services/: exchange_rate_service.py  gdrive_management.py
app/static/css/: style.css
app/templates/: base.html  basenavbar.html  navbar.html
migrations/versions/: 048a4edc41cc_medio_de_pago_muchos_muchos.py  073f61e22e78_.py  1d35b29e002d_.py  242cdbceda1e_añadido_divisa.py  254f77ec2433_description_income.py  2569001ed744_.py  3235fce79c29_nuevas_tablas_income.py  3577890166e8_medio_de_pago_cuenta_descuento.py  4446ed7e77e4_divisa_en_gastos.py  48824b14587f_medio_de_pago__gasto.py  5d8434f27ae3_.py  66cffad57ce4_.py  73be6e5bb0dc_a.py  7ef678984761_.py  8d769f4f3903_.py  8e6552aab188_users.py  9e5a5199c918_add_fs_uniquifier_field.py  a2deb7f0830c_nuevas_tablas_income_v2.py  c4f2ba319a24_users2.py  d36430b71088_avoiding_duplicates.py  db84f2ac6e76_users3.py  dd29e595296c_.py  e163bd6f723a_.py  e8c3b0a886a2_.py
tools/diagnostics/: fix_roles_table.py  force_access.py  verify_role_check.py
tools/user_management/: assign_admin_role.py  check_roles.py  check_users.py  update_all_users_uniquifier.py  update_existing_users.py
(+13 files in other folders)
