[project]
name = "finances-webapp"
version = "1.0.0"
description = "Personal Finance Management Web Application"
requires-python = ">=3.10"
dependencies = [
    "alembic==1.15.2",
    "blinker==1.9.0",
    "bootstrap-flask==2.4.2",
    "cachetools==5.5.2",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "colorama==0.4.6",
    "deprecated==1.2.18",
    "dnspython==2.7.0",
    "email-validator==2.2.0",
    "flask==3.1.0",
    "flask-limiter==3.11.0",
    "flask-login==0.6.3",
    "flask-migrate==4.1.0",
    "flask-principal==0.4.0",
    "flask-security-too==5.6.1",
    "flask-sqlalchemy==3.1.1",
    "flask-talisman==1.1.0",
    "flask-wtf==1.2.2",
    "google-api-core==2.24.2",
    "google-api-python-client==2.169.0",
    "google-auth==2.39.0",
    "google-auth-httplib2==0.2.0",
    "google-auth-oauthlib==1.2.2",
    "googleapis-common-protos==1.70.0",
    "greenlet==3.2.1",
    "gspread==6.2.0",
    "gspread-dataframe==4.0.0",
    "httplib2==0.22.0",
    "idna==3.10",
    "importlib-metadata==8.7.0",
    "importlib-resources==6.5.2",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "limits==4.2",
    "mako==1.3.10",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "numpy==2.0.2",
    "oauthlib==3.2.2",
    "ordered-set==4.1.0",
    "packaging==24.2",
    "pandas==2.2.3",
    "passlib==1.7.4",
    "proto-plus==1.26.1",
    "protobuf==6.30.2",
    "psycopg2-binary==2.9.10",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pygments==2.19.1",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "pytz==2025.2",
    "requests==2.32.3",
    "requests-oauthlib==2.0.0",
    "rich==13.9.4",
    "rsa==4.9.1",
    "six==1.17.0",
    "sqlalchemy==2.0.40",
    "typing-extensions==4.13.2",
    "tzdata==2025.2",
    "uritemplate==4.1.1",
    "urllib3==2.4.0",
    "werkzeug==3.1.3",
    "wrapt==1.17.2",
    "wtforms==3.2.1",
    "zipp==3.21.0",
]

[project.optional-dependencies]
prod = [
    "gunicorn==21.2.0",
]

[tool.uv]
dev-dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
